k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector: 
    app: web
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
