k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.org/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: kubenews.local.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
